@@ -1,6 +1,6 @@
 [ ABOUT ]
 
-tintwizard 0.3 (6th March 2010)
+tintwizard 0.3.1 (7th March 2010)
 
 Thank you for downloading tintwizard!
 
@@ -12,7 +12,7 @@ Please report any problems by posting a bug report at
 http://code.google.com/p/tintwizard/issues/entry
 
 This version of tintwizard should be up to date with the development
-version of tint2 at this moment in time [6th March 2010].
+version of tint2 at this moment in time [7th March 2010].
 
 [ HOW-TO ]
 
